--- a/app/home.html
+++ b/app/home.html
@@ -24,6 +24,36 @@
         <div class="welcome-text">
           <span>欢迎<strong>小胖</strong>进入,芭菲CMD管理系统</span>
         </div>
+        <div class="modal fade bs-example-modal-sm  in" id="modPasswd" tabindex="-1" role="dialog"
+             style="display: block;">
+          <div class="modal-dialog modal-md-sm" role="document">
+            <div class="modal-content ">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                  aria-hidden="true">×</span></button>
+                <h4 class="modal-title" id="myModalLabel">密码修改</h4></div>
+              <div class="modal-body">
+                <div class="form-group">
+                  <div class="input-group not-null">
+                    <div class="input-group-addon">原密码</div>
+                    <input type="password" class="form-control " placeholder="请输入原密码"></div>
+                  <div class="input-group not-null">
+                    <div class="input-group-addon">新密码</div>
+                    <input type="password" class="form-control " placeholder="请输入新密码"></div>
+                  <div class="input-group not-null">
+                    <div class="input-group-addon">新密码</div>
+                    <input type="password" class="form-control " placeholder="请输入新密码"></div>
+
+                </div>
+              </div>
+              <div class="modal-footer">
+                <div class="text-error text-danger text-center">密码不正确</div>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">保存</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -38,13 +68,13 @@
 </body>
 </html>
 <!--<li class="dropdown">-->
-  <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-    <!--<span>重庆</span><span class="caret"></span>-->
-  <!--</a>-->
-  <!--<ul class="dropdown-menu">-->
-    <!--<li class="active"><a href="#">重庆</a></li>-->
-    <!--<li ><a href="#">成都</a></li>-->
-    <!--<li class="divider"></li>-->
-    <!--<li ><a href="#">杭州</a></li>-->
-  <!--</ul>-->
+<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+<!--<span>重庆</span><span class="caret"></span>-->
+<!--</a>-->
+<!--<ul class="dropdown-menu">-->
+<!--<li class="active"><a href="#">重庆</a></li>-->
+<!--<li ><a href="#">成都</a></li>-->
+<!--<li class="divider"></li>-->
+<!--<li ><a href="#">杭州</a></li>-->
+<!--</ul>-->
 <!--</li>-->
