--- a/app/list-view.html
+++ b/app/list-view.html
@@ -40,7 +40,101 @@
             <div class="input-group-addon"><span>用户名称</span></div>
             <input type="text" class="form-control" placeholder="请输入筛选条件" value="">
           </div>
+          <div class="input-group">
+            <div class="input-group-dropdown">
+              <div class="input-group">
+                <div class="input-group-addon" >
+                  <span>创建时间</span>
+                </div>
+                <input type="text" class="form-control  form_datetime" value="2016年10月1日" readonly="readonly"
+                       placeholder="请输入宴会时间">
+                <div class="input-group-btn">
+                  <button class="btn btn-info dropdown-toggle"
+                          data-toggle="collapse" data-target="#collapseSiftDate" aria-expanded="false">
+                    <span class="size-base glyphicon glyphicon-calendar">日期</span>
+                  </button>
+                  <div class="dropdown-date collapse" id="collapseSiftDate">
+                    <div class="u-datepicker-box">
+                      <div class="datepicker">
+                        <div class="datepicker-group">
+                          <div class="datepicker-header">
+                            <div class="left-btn-box"><span class="icon-left-btn"></span></div>
+                            <div class="date-title-box">
+                              <span class="date-year">2016年</span>
+                              <span class="date-month">7月</span>
+                            </div>
+                            <div class="right-btn-box"><span class="icon-right-btn"></span></div>
+                          </div>
+                          <table class="datepicker-calendar">
+                            <thead>
+                            <tr>
+                              <th class="work-date"><span>一</span></th>
+                              <th class="work-date"><span>二</span></th>
+                              <th class="work-date"><span>三</span></th>
+                              <th class="work-date"><span>四</span></th>
+                              <th class="work-date"><span>五</span></th>
+                              <th class="rest-date"><span>六</span></th>
+                              <th class="rest-date"><span>日</span></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                              <td class="day-null "></td>
+                              <td class="day-null "></td>
+                              <td class="day-null "></td>
+                              <td class="day-null "></td>
+                              <td class="before-day-number"><span>1</span></td>
+                              <td class="before-day-number"><span>2</span></td>
+                              <td class="before-day-number"><span>3</span></td>
+                            </tr>
+                            <tr>
+                              <td class="before-day-number"><span>4</span></td>
+                              <td class="before-day-number"><span>5</span></td>
+                              <td class="before-day-number"><span>6</span></td>
+                              <td class="before-day-number"><span>7</span></td>
+                              <td class="before-day-number"><span>8</span></td>
+                              <td class="before-day-number"><span>9</span></td>
+                              <td class="before-day-number"><span>10</span></td>
+                            </tr>
+                            <tr>
+                              <td class="before-day-number"><span>11</span></td>
+                              <td class="before-day-number"><span>12</span></td>
+                              <td class="before-day-number"><span>13</span></td>
+                              <td class="before-day-number"><span>14</span></td>
+                              <td class="before-day-number"><span>15</span></td>
+                              <td class="before-day-number"><span>16</span></td>
+                              <td class="before-day-number"><span>17</span></td>
+                            </tr>
+                            <tr>
+                              <td class="day-number state-today"><span>18</span></td>
+                              <td class="day-number"><span>19</span></td>
+                              <td class="day-number"><span>20</span></td>
+                              <td class="day-number"><span>21</span></td>
+                              <td class="day-number"><span>22</span></td>
+                              <td class="day-number"><span>23</span></td>
+                              <td class="day-number"><span>24</span></td>
+                            </tr>
+                            <tr>
+                              <td class="day-number"><span>25</span></td>
+                              <td class="day-number"><span>26</span></td>
+                              <td class="day-number"><span>27</span></td>
+                              <td class="day-number"><span>28</span></td>
+                              <td class="day-number"><span>29</span></td>
+                              <td class="day-number"><span>30</span></td>
+                              <td class="day-number"><span>31</span></td>
+                            </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="btn btn-primary search">搜索</div>
+
         </div>
         <table>
           <thead>
