--- a/app/home.html
+++ b/app/home.html
@@ -8,7 +8,7 @@
   <title>CMS系统</title>
   <!-- Bootstrap -->
 
-  <link href="./styles/app.css" rel="stylesheet">
+  <link href="./styles/app.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,7 +43,6 @@
                   <div class="input-group not-null">
                     <div class="input-group-addon">新密码</div>
                     <input type="password" class="form-control " placeholder="请输入新密码"></div>
-
                 </div>
               </div>
               <div class="modal-footer">
