--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>金色百年订单管理系统</title>
     <!-- Bootstrap -->
-    <link href="./styles/app.css" rel="stylesheet" >
+    <link href="./styles/app.min.css" rel="stylesheet">
 </head>
 
 <body>
