--- a/app/detail-view.html
+++ b/app/detail-view.html
@@ -8,7 +8,7 @@
   <title>CMS系统</title>
   <!-- Bootstrap -->
 
-  <link href="./styles/app.css" rel="stylesheet">
+  <link href="./styles/app.min.css" rel="stylesheet">
 </head>
 
 <body>
